<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/facia_white_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="48dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <ImageView
                android:id="@id/faciaLogoImg"
                android:layout_width="195dp"
                android:layout_height="58dp"
                android:layout_marginTop="55dp"
                android:background="@drawable/ic_facia_logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                app:layout_constrainedHeight="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/faciaLogoImg">

                <TextView
                    android:id="@+id/addressTypeHeadingTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/address_type_heading"
                    android:textColor="@color/facia_black_color"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/utilityBillLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="36dp"
                    android:layout_marginTop="32dp"
                    android:background="@color/verification_type_opt_bg"
                    android:padding="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addressTypeHeadingTxt">

                    <ImageView
                        android:id="@+id/utilityBillImg"
                        android:layout_width="22dp"
                        android:layout_height="18dp"
                        android:background="@drawable/ic_face_doc"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center_horizontal"
                        android:text="@string/utility_bill"
                        android:textColor="@color/facia_black_color"
                        android:textSize="18sp"
                        app:layout_constrainedWidth="true"
                        app:layout_constraintBottom_toBottomOf="@+id/utilityBillImg"
                        app:layout_constraintLeft_toRightOf="@+id/utilityBillImg"
                        app:layout_constraintTop_toTopOf="@+id/utilityBillImg" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_arrow_forward"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/bankStatementLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="36dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/verification_type_opt_bg"
                    android:padding="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/utilityBillLayout">

                    <ImageView
                        android:id="@+id/bankStatementImg"
                        android:layout_width="22dp"
                        android:layout_height="18dp"
                        android:background="@drawable/ic_face_doc"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center_horizontal"
                        android:text="@string/bank_statement"
                        android:textColor="@color/facia_black_color"
                        android:textSize="18sp"
                        app:layout_constrainedWidth="true"
                        app:layout_constraintBottom_toBottomOf="@+id/bankStatementImg"
                        app:layout_constraintLeft_toRightOf="@+id/bankStatementImg"
                        app:layout_constraintTop_toTopOf="@+id/bankStatementImg" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_arrow_forward"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/govtLetterLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="36dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/verification_type_opt_bg"
                    android:padding="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bankStatementLayout">

                    <ImageView
                        android:id="@+id/govtLetterImg"
                        android:layout_width="22dp"
                        android:layout_height="18dp"
                        android:background="@drawable/ic_face_doc"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center_horizontal"
                        android:text="@string/govt_letter"
                        android:textColor="@color/facia_black_color"
                        android:textSize="18sp"
                        app:layout_constrainedWidth="true"
                        app:layout_constraintBottom_toBottomOf="@+id/govtLetterImg"
                        app:layout_constraintLeft_toRightOf="@+id/govtLetterImg"
                        app:layout_constraintTop_toTopOf="@+id/govtLetterImg" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_arrow_forward"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/councilTaxLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="36dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/verification_type_opt_bg"
                    android:padding="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/govtLetterLayout">

                    <ImageView
                        android:id="@+id/councilTaxImg"
                        android:layout_width="22dp"
                        android:layout_height="18dp"
                        android:background="@drawable/ic_face_doc"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:fontFamily="@font/inter_regular"
                        android:gravity="center_horizontal"
                        android:text="@string/council_tax"
                        android:textColor="@color/facia_black_color"
                        android:textSize="18sp"
                        app:layout_constrainedWidth="true"
                        app:layout_constraintBottom_toBottomOf="@+id/councilTaxImg"
                        app:layout_constraintLeft_toRightOf="@+id/councilTaxImg"
                        app:layout_constraintTop_toTopOf="@+id/councilTaxImg" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_arrow_forward"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/footer"
            layout="@layout/facia_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
